<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Librarian.GWT Downloader</string>
    <string name="title_activity_main">Librarian.GWT Downloader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Librarian.GWT Settings</string>
    <string name="settings_serverip">Server IP</string>
    <string name="settings_serverip_summary">Librarian.GWT server IP address</string>
    <string name="settings_serverport">Server port</string>
    <string name="settings_serverport_summary">Librarian.GWT server port</string>
    <string name="settings_username">User name:</string>
    <string name="settings_username_summary">User name to access Librarian.GWT server</string>
    <string name="settings_password">Password:</string>
    <string name="settings_password_summary">User password to access Librarian.GWT server</string>
    <string name="settings_save">Save</string>
    <string name="settings_cancel">Cancel</string>
    
</resources>
