<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="192.168.1.1"
        android:key="serverIP"
        android:negativeButtonText="@string/settings_cancel"
        android:positiveButtonText="@string/settings_save"
        android:summary="@string/settings_serverip_summary"
        android:title="@string/settings_serverip" />
    <EditTextPreference
        android:defaultValue="8080"
        android:key="serverPort"
        android:negativeButtonText="@string/settings_cancel"
        android:positiveButtonText="@string/settings_save"
        android:summary="@string/settings_serverport_summary"
        android:title="@string/settings_serverport" />
    <EditTextPreference
        android:defaultValue=""
        android:key="userName"
        android:negativeButtonText="@string/settings_cancel"
        android:positiveButtonText="@string/settings_save"
        android:summary="@string/settings_username_summary"
        android:title="@string/settings_username" />
    <EditTextPreference
        android:defaultValue=""
        android:inputType="textPassword"
        android:key="serverIP"
        android:negativeButtonText="@string/settings_cancel"
        android:positiveButtonText="@string/settings_save"
        android:summary="@string/settings_password_summary"
        android:title="@string/settings_password" />

</PreferenceScreen>